[package]
description = "Solana Program Test Framework"
name = "solana-program-test"
version = "1.18.22"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.73"
base64 = "0.21.4"
bincode = "1.3.3"
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.8"
log = "0.4.20"
serde = "1.0.188"
solana-accounts-db = { version = "=1.18.22" }
solana-banks-client = { version = "=1.18.22" }
solana-banks-interface = { version = "=1.18.22" }
solana-banks-server = { version = "=1.18.22" }
solana-bpf-loader-program = { version = "=1.18.22" }
solana-logger = { version = "=1.18.22" }
solana-program-runtime = { version = "=1.18.22" }
solana-runtime = { version = "=1.18.22" }
solana-sdk = { version = "=1.18.22" }
solana-vote-program = { version = "=1.18.22" }
solana_rbpf = "=0.8.0"
test-case = "3.2.1"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
solana-stake-program = { version = "=1.18.22" }
